Support more actions