@@ -1,25 +1,34 @@
 package com.github.verils.gotemplate.parse;
 
-import java.util.Deque;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class CommandNode implements Node {
 
-    private final Deque<Node> arguments = new LinkedList<>();
+    private final List<Node> arguments = new LinkedList<>();
 
     public void append(Node node) {
         arguments.add(node);
     }
 
     public Node getLastArgument() {
-        return arguments.getLast();
+        return arguments.get(arguments.size() - 1);
     }
 
     @Override
     public String toString() {
-        return arguments.stream().map(Objects::toString).collect(Collectors.joining(" "));
+        StringBuilder sb = new StringBuilder();
+        for (int i = 0; i < arguments.size(); i++) {
+            if (i > 0) {
+                sb.append(' ');
+            }
+            Node node = arguments.get(i);
+            if (node instanceof PipeNode) {
+                sb.append('(').append(node).append(')');
+            } else {
+                sb.append(node);
+            }
+        }
+        return sb.toString();
     }
 }
